# BioNEV

./: setup.cfg
src/bionev/: __main__.py  embed_train.py  evaluation.py  main.py  utils.py
src/bionev/GAE/: initialization.py  layers.py  model.py  optimizer.py  preprocessing.py  train_model.py
src/bionev/OpenNE/: classify.py  gf.py  graph.py  grarep.py  hope.py  lap.py  line.py  node2vec.py  sdne.py  walker.py
src/bionev/SVD/: model.py
src/bionev/struc2vec/: algorithms.py  algorithms_distances.py  graph.py  struc2vec.py  utils.py
