##########################
# Setup.py Configuration #
##########################
[metadata]
name = bionev
version = 0.1.0-dev
description = Biomedical Network Embedding Evaluation
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/hzionn/BioNEV

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bioinformatics
keywords = 
    graph embedding
    network embedding
    biomedical network

[options]
install_requires =
    numpy >= 2.0
    networkx
    scipy
    tensorflow >= 2.0
    gensim
    scikit-learn
    tqdm
    fastdtw

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.10

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bionev = bionev.main:more_main
